syntax="proto3";

package sw_service;

option go_package = "./proto";

service StarWarsService {
  // simple RPC
  rpc RandomCharacter(NoParam) returns (Character);
}

message NoParam {};

message Character {
  string name = 1;
  string homeworld = 2;
  string imageURL = 3;
};